--- a/home/wiki/Change_log/v4.5.19.1801.html
+++ b/home/wiki/Change_log/v4.5.19.1801.html
@@ -18,6 +18,9 @@
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
     <h2>
+      <span class="mw-headline" id="v4.5.19.1801_.282018-01-05.29">v4.5.19.1801 (2018-01-05)</span>
+    </h2>
+    <h2>
       <span class="mw-headline" id="Wiki">Wiki</span>
     </h2>
     <ul>
