--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -36,35 +36,38 @@
           </ul>
         </li>
         <li class="toclevel-1 tocsection-4">
-          <a href="#Wiki"><span class="tocnumber">2</span> <span class="toctext">Wiki</span></a>
+          <a href="#v4.5.19.1801_.282018-01-05.29"><span class="tocnumber">2</span> <span class="toctext">v4.5.19.1801 (2018-01-05)</span></a>
         </li>
         <li class="toclevel-1 tocsection-5">
-          <a href="#PC"><span class="tocnumber">3</span> <span class="toctext">PC</span></a>
+          <a href="#Wiki"><span class="tocnumber">3</span> <span class="toctext">Wiki</span></a>
         </li>
         <li class="toclevel-1 tocsection-6">
-          <a href="#v4.5.15.1709_.282017-09-15.29"><span class="tocnumber">4</span> <span class="toctext">v4.5.15.1709 (2017-09-15)</span></a> 
+          <a href="#PC"><span class="tocnumber">4</span> <span class="toctext">PC</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-7">
+          <a href="#v4.5.15.1709_.282017-09-15.29"><span class="tocnumber">5</span> <span class="toctext">v4.5.15.1709 (2017-09-15)</span></a> 
           <ul>
-            <li class="toclevel-2 tocsection-7">
-              <a href="#Wiki_2"><span class="tocnumber">4.1</span> <span class="toctext">Wiki</span></a>
+            <li class="toclevel-2 tocsection-8">
+              <a href="#Wiki_2"><span class="tocnumber">5.1</span> <span class="toctext">Wiki</span></a>
             </li>
           </ul>
-        </li>
-        <li class="toclevel-1 tocsection-8">
-          <a href="#PC_2"><span class="tocnumber">5</span> <span class="toctext">PC</span></a>
         </li>
         <li class="toclevel-1 tocsection-9">
-          <a href="#v4.5.7.1706_.282017-06-25.29"><span class="tocnumber">6</span> <span class="toctext">v4.5.7.1706 (2017-06-25)</span></a> 
+          <a href="#PC_2"><span class="tocnumber">6</span> <span class="toctext">PC</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-10">
+          <a href="#v4.5.7.1706_.282017-06-25.29"><span class="tocnumber">7</span> <span class="toctext">v4.5.7.1706 (2017-06-25)</span></a> 
           <ul>
-            <li class="toclevel-2 tocsection-10">
-              <a href="#Wiki_3"><span class="tocnumber">6.1</span> <span class="toctext">Wiki</span></a>
+            <li class="toclevel-2 tocsection-11">
+              <a href="#Wiki_3"><span class="tocnumber">7.1</span> <span class="toctext">Wiki</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-11">
-          <a href="#PC_3"><span class="tocnumber">7</span> <span class="toctext">PC</span></a>
-        </li>
         <li class="toclevel-1 tocsection-12">
-          <a href="#Archives"><span class="tocnumber">8</span> <span class="toctext">Archives</span></a>
+          <a href="#PC_3"><span class="tocnumber">8</span> <span class="toctext">PC</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-13">
+          <a href="#Archives"><span class="tocnumber">9</span> <span class="toctext">Archives</span></a>
         </li>
       </ul>
     </div>
@@ -120,6 +123,9 @@
     <p>
       The most important category to review is <b>major</b>. The other categories may be skipped due to lower importance (if they were more important, they would be bumped up to <b>major</b>).
     </p>
+    <h2>
+      <span class="mw-headline" id="v4.5.19.1801_.282018-01-05.29">v4.5.19.1801 (2018-01-05)</span>
+    </h2>
     <h2>
       <span class="mw-headline" id="Wiki">Wiki</span>
     </h2>
