--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -97,6 +97,9 @@
       </li>
     </ul>
     <h2>
+      <span class="mw-headline" id="v4.5.19.1801_.282018-01-05.29">v4.5.19.1801 (2018-01-05)</span>
+    </h2>
+    <h2>
       <span class="mw-headline" id="Wiki">Wiki</span>
     </h2>
     <ul>
