--- a/home/wiki/Options/Dev.html
+++ b/home/wiki/Options/Dev.html
@@ -343,8 +343,7 @@
           <div class='xocfg_itm_data'>
 <textarea id="xowa.app.startup.tabs.previous_list" data-xocfg-key="xowa.app.startup.tabs.previous_list" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo xocfg_data__readonly" readonly="true">
 de.wikipedia.org/wiki/Spezial:XowaSearch?search=Negan&amp;limits=200
-de.wikipedia.org/wiki/Spezial:XowaSystemData?type=log_session
-home/wiki/Blog/2018-01
+home/wiki/Main_Page
 </textarea>
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.startup.tabs.previous_list__key_box' value='xowa.app.startup.tabs.previous_list'> <input type='hidden' id='xowa.app.startup.tabs.previous_list__ctx_box' value='app'>
@@ -365,7 +364,7 @@ home/wiki/Blog/2018-01
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.startup.tabs.previous_selected")' title="reset to &quot;&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.startup.tabs.previous_selected" data-xocfg-key="xowa.app.startup.tabs.previous_selected" data-xocfg-type="int" accesskey="d" class="xocfg_data__int xocfg_data__readonly" type="text" readonly="true" value="2">
+            <input id="xowa.app.startup.tabs.previous_selected" data-xocfg-key="xowa.app.startup.tabs.previous_selected" data-xocfg-type="int" accesskey="d" class="xocfg_data__int xocfg_data__readonly" type="text" readonly="true" value="1">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.startup.tabs.previous_selected__key_box' value='xowa.app.startup.tabs.previous_selected'> <input type='hidden' id='xowa.app.startup.tabs.previous_selected__ctx_box' value='app'>
         </div><!-- DIV:help -->
